# BPM.cmake

./: .bpm-registry  BPM.cmake  BPM2.cmake  CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
docs/: BPMCreatePakcage.md
tests/: .gitignore  CMakeCache.txt  Makefile
tests/add_install_better_patch_version/: .bpm-registry  .gitignore  CMakeLists.txt  Makefile  main.cpp
tests/add_install_compatible_version/: .bpm-registry  CMakeLists.txt  main.cpp
tests/add_install_exact_version/: .bpm-registry  CMakeLists.txt  Makefile  main.cpp
tests/add_nested_libraries_with_different_options_fails/: .bpm-registry  CMakeLists.txt  Makefile
tests/add_nested_libraries_with_different_options_inherit/: .bpm-registry  CMakeLists.txt
tests/add_nested_libraries_with_same_options_succeeds/: .bpm-registry  CMakeLists.txt  Makefile
tests/add_source_exact_version/: .bpm-registry  CMakeLists.txt  Makefile  main.cpp
tests/add_two_libraries_with_different_option_truth_values_succeeds/: .bpm-registry  CMakeLists.txt
tests/add_two_libraries_with_different_options_fails/: .bpm-registry  CMakeLists.txt
tests/depend_on_B_and_DepC/: .bpm-registry  CMakeLists.txt  Makefile  main.cpp
